--- a/style.css
+++ b/style.css
@@ -89,9 +89,12 @@ button:hover {
 }
 
 .radios {
+  
   display: flex;
   justify-content: space-between;
   gap: 15%;
+  margin-right: 10px;
+  
   /* cursor: pointer; */
 }
 
@@ -104,4 +107,22 @@ button:hover {
 
 .rate{
     font-weight: 100;
+}
+.socials{
+  display: flex;
+  justify-content: space-between;
+  padding: 0px 20px 0px 20px;
+}
+.socials a{
+  color: #fff;
+  text-decoration: none;
+  background-color: rgb(0, 45, 96);
+  /* height: 20px; */
+  padding: 15px;
+  font-size: 25px;
+  border-radius: 10px;
+}
+.socials a:hover{
+  color: rgb(0, 45, 96);
+  background-color: rgb(131, 189, 255);
 }
