--- a/style.css
+++ b/style.css
@@ -16,7 +16,24 @@ body {
 img{
     width: 90%;
 }
-
+.socials{
+  display: flex;
+  justify-content: space-between;
+  padding: 0px 20px 0px 20px;
+}
+.socials a{
+  color: #fff;
+  text-decoration: none;
+  background-color: rgb(0, 45, 96);
+  /* height: 20px; */
+  padding: 15px;
+  font-size: 25px;
+  border-radius: 10px;
+}
+.socials a:hover{
+  color: rgb(0, 45, 96);
+  background-color: rgb(131, 189, 255);
+}
 h1{
     text-align: center;
     font-size: 40px;
